--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -49,7 +49,8 @@
                 android:id="@+id/readRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/add_book_read" />
+                android:text="@string/add_book_read"
+                android:checked="true"/>
 
             <RadioButton
                 android:id="@+id/readingRadioButton"
